kust/kust/cluster/test/prometheus/resources/ingress-prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/auth-realm: Authentication Required
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-type: basic
  name: prometheus-test
  namespace: monitoring
spec:
  rules:
    - host: prometheus.fcaus-te.autodata.tech
      http:
        paths:
          - backend:
                service:
                  name: prometheus-test
                  port:
                    name: web
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - prometheus.fcaus-te.autodata.tech
      secretName: fcaus-wildcard
